partially update the services with right exception types